# ConvStencil

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/1d/: 1d_utils.h  gpu_1r.cu  gpu_2r.cu  main.cu
src/2d/: 2d_utils.h  gpu.cu  main.cu
src/3d/: 3d_utils.h  gpu_box.cu  gpu_star.cu  main.cu
src/cudnn/: conv_1d3p.cu  conv_1d5p.cu  conv_box2d49p.cu  conv_box2d9p.cu  conv_box3d27p.cu
